--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,11 +17,51 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.wrapper {
+  color: #282c34;
+  width: 350px;
+  background-color: aliceblue;
+  border-radius: 25px;
+}
+
+.search {
+  padding: 5px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.img {
+  width: 350px;
+  height: 450px;
+}
+
+.movie-title {
+  height: 40px;
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+.rate {
+  color: red;
+  margin-bottom: 24px;
+}
+
+.btn {
+  margin: 10px;
+  border-radius: 10px;
+  padding: 5px;
+  font-weight: bold;
+  font-size: 18px;
+  background-color: red;
 }
